<resources>
    <string name="app_name">Assignment2</string>
    <string name="default_web_client_id">"15439992976-kuaq76si7m9vm0ntnn1gn2lv29u2otqu.apps.googleusercontent.com"</string>
    <string name="todo">TODO</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_to_assignment2_app">Welcome to Assignment2 App</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="profile_details">Profile Details</string>
    <string name="name_shivam_kumar">Name: Shivam Kumar</string>
    <string name="email_example_gmail_com">Email: example@gmail.com</string>
    <string name="add_question_detail">Add Question Detail</string>
    <string name="enter_question">Enter Question</string>
    <string name="select_category">Select Category</string>
    <string name="or_enter_new_category">Or enter new category</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="upload">UPLOAD</string>
    <string name="sample_question">Sample Question?</string>
    <string name="answer_this_is_a_solution">Answer: This is a solution</string>
    <string name="category">#Category</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

</resources>