<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activity.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/profile_details"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/profile"
                android:layout_marginTop="14dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_shivam_kumar"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"
                android:textColor="#333" />

            <TextView
                android:id="@+id/textUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_example_gmail_com"
                android:textSize="16sp"

                android:layout_marginBottom="12dp"
                android:textColor="#666" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
